@@ -1,10 +1,8 @@
-Revised Todo (July, 10, 2008):
-
- - Don't allow the removal of the phpsla.sqlite alias.
+Revised Todo (July 25, 2008):
  
  - Error checking for adding database aliases. How should general error handling work?
 
- - Add row adding/editing/deleting. (I have a basic implimentation. -chale)
+ - Add row adding/editing/deleting. (We have a basic implimentation currently.)
  
  - When displaying the phpsqliteadmin version, it should display the number within the configuration table of the phpsla.sqlite database.
 
@@ -17,11 +15,8 @@ Revised Todo (July, 10, 2008):
  - Feel free to add more. I was unsure of a few of entries in the old todo's.
 
  - Privilege checks for databases?
-
+ 
 Old Todo:
-- you can add an alias database w/out the alias filled, which is bad...
-
-- you can remove phpsla.sqlite alias, which is bad as well
 
 - "browse" should have navigation buttons
 
